# solanacreatorcli-frontend

./: .gitignore  README.md  wallet.json
solana-token-cli/: .gitignore  README.md  demo-script.md  package-lock.json  package.json
solana-token-cli/cli/: .env.example  config.js  fetch-info.js  get-token-info.js  index.js  metadata-utils.js  package-lock.json  package.json  raydium-utils.js  token-utils.js  token-viewer.js  umi-token-creator.js
solana-token-cli/frontend/: package-lock.json  package.json
solana-token-cli/frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
solana-token-cli/frontend/src/app/about/: page.tsx
solana-token-cli/frontend/src/app/my-tokens/: page.tsx
solana-token-cli/frontend/src/components/: Navbar.tsx  TokenForm.tsx
solana-token-cli/frontend/src/utils/: program.ts
solana-token-cli/program/: Cargo.toml
solana-token-cli/program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
