[package]
name = "token-deployer"
version = "0.1.0"
edition = "2021"
description = "Solana program for deploying SPL tokens and adding liquidity"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_deployer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.16.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
thiserror = "1.0"
borsh = "0.10.0"
borsh-derive = "0.10.0"
bytemuck = { version = "1.13.1", features = ["derive"] }

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
